[gd_scene load_steps=14 format=3 uid="uid://dgxpfyqr4h7gj"]

[ext_resource type="Script" path="res://examples/lobby/Lobby.gd" id="1"]
[ext_resource type="PackedScene" path="res://components/Card/Card.tscn" id="2"]
[ext_resource type="FontFile" path="res://resources/fonts/Pacifico-200px.tres" id="3"]
[ext_resource type="FontFile" path="res://resources/fonts/RobotoLight-24px.tres" id="4"]
[ext_resource type="PackedScene" path="res://components/Spinner/Spinner.tscn" id="5"]
[ext_resource type="PackedScene" path="res://examples/lobby/LobbyEntry.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://clkyypjssum55" path="res://components/Button/Button.tscn" id="7"]
[ext_resource type="Texture2D" uid="uid://cpwn237nc73jt" path="res://resources/textures/Refresh.svg" id="8"]
[ext_resource type="PackedScene" path="res://components/TextInput/TextInput.tscn" id="9"]
[ext_resource type="PackedScene" uid="uid://djly8jwwet4nh" path="res://components/Game/Game.tscn" id="10"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="2"]
bg_color = Color(0.917647, 0.929412, 0.913725, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 16

[sub_resource type="StyleBoxFlat" id="3"]
bg_color = Color(0.85098, 0.85098, 0.85098, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[node name="Root" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Lobbies" type="Control" parent="."]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Background" type="ColorRect" parent="Lobbies"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.882353, 0.882353, 0.882353, 1)

[node name="List" parent="Lobbies" instance=ExtResource("2")]
layout_mode = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = -101.0
theme_override_styles/panel = SubResource("1")

[node name="GameTitle" type="Label" parent="Lobbies/List"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -264.5
offset_right = 280.0
offset_bottom = 87.5
rotation = -7.4172
pivot_offset = Vector2(280, 176)
theme_override_colors/font_color = Color(0.92549, 0.92549, 0.92549, 1)
theme_override_fonts/font = ExtResource("3")
text = "Draw!"

[node name="Title" type="Label" parent="Lobbies/List"]
layout_mode = 0
offset_left = 20.0
offset_top = 10.0
offset_right = 96.0
offset_bottom = 39.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
text = "Lobbies"

[node name="Spinner" parent="Lobbies/List" instance=ExtResource("5")]
layout_mode = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 76.0
offset_bottom = 76.0

[node name="LobbyEntry" parent="Lobbies/List" instance=ExtResource("6")]
layout_mode = 0
anchor_right = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 76.0
theme_override_styles/panel = SubResource("2")

[node name="Entries" type="Control" parent="Lobbies/List"]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.56827
offset_right = 1.5683

[node name="Refresh" parent="Lobbies/List" instance=ExtResource("7")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -28.0
offset_top = -69.0
offset_right = 28.0
offset_bottom = -13.0005
grow_horizontal = 1
pivot_offset = Vector2(28, 28)
texture = ExtResource("8")

[node name="Host" parent="Lobbies" instance=ExtResource("2")]
layout_mode = 0
anchor_top = 1.0
anchor_right = 0.0
offset_left = 0.0
offset_top = -88.0
offset_right = 0.0
offset_bottom = 0.0
theme_override_styles/panel = SubResource("1")

[node name="Name" parent="Lobbies/Host" instance=ExtResource("9")]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 15.0
offset_top = -25.0
offset_right = 429.0
offset_bottom = 25.0
theme_override_styles/panel = SubResource("3")
placeholder_text = "Lobby name..."

[node name="Host" parent="Lobbies/Host" instance=ExtResource("7")]
layout_mode = 0
anchors_preset = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -172.0
offset_top = -28.0
offset_right = -18.0
offset_bottom = 28.0
grow_horizontal = 1
text = "Host"

[node name="Game" parent="." instance=ExtResource("10")]
visible = false
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="selected" from="Lobbies/List/LobbyEntry" to="." method="_on_LobbyEntry_selected"]
[connection signal="clicked" from="Lobbies/List/Refresh" to="." method="_on_Refresh_clicked"]
[connection signal="clicked" from="Lobbies/Host/Host" to="." method="_on_Host_clicked"]
